k8s/juice-shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
  namespace: juice-shop
spec:
  type: ClusterIP
  selector:
    app: juice-shop
  ports:
  - port: 3000
    targetPort: 3000
