k8s/juice-shop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-shop
  namespace: juice-shop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: juice.<MASTER_PUBLIC_IP>.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: juice-shop
            port:
              number: 3000
